@@ -2,15 +2,15 @@ package com.cardoffers.oms.service;
 
 import org.mockito.Mockito;
 import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.verify;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -46,95 +46,92 @@ class MerchantServiceImplTest {
         entity.setCategory("test-value");
         entity.setLogoUrl("https://example.com");
         entity.setWebsite("test-value");
+        entity.setCreatedAt(java.time.LocalDateTime.of(2025, 1, 15, 10, 30));
         entity.setActive(true);
         return entity;
     }
 
     private static MerchantDTO aMerchantDTO() {
-        MerchantDTO dto = new MerchantDTO();
-        dto.setName("TestName");
-        dto.setDescription("Test description");
-        dto.setCategory("test-value");
-        dto.setLogoUrl("https://example.com");
-        dto.setWebsite("test-value");
-        dto.setActive(true);
-        return dto;
+        MerchantDTO entity = new MerchantDTO();
+        entity.setName("TestName");
+        entity.setDescription("Test description");
+        entity.setCategory("test-value");
+        entity.setLogoUrl("https://example.com");
+        entity.setWebsite("test-value");
+        entity.setActive(true);
+        return entity;
     }
 
     @Test
-    void shouldReturnMerchantDTO_whenGetMerchantById() {
+    void shouldReturnMerchant_whenMerchantExists() {
         Merchant merchant = aMerchant();
+        MerchantDTO dto = aMerchantDTO();
+        
         when(merchantRepository.findById(1L)).thenReturn(Optional.of(merchant));
-        when(merchantMapper.toDTO(merchant)).thenReturn(aMerchantDTO());
+        when(merchantMapper.toDTO(merchant)).thenReturn(dto);
 
         MerchantDTO result = merchantServiceImpl.getMerchantById(1L);
 
         assertNotNull(result);
-        assertEquals("TestName", result.getName());
+        assertEquals(dto.getName(), result.getName());
     }
 
     @Test
-    void shouldThrowResourceNotFoundException_whenGetMerchantByIdDoesNotExist() {
-        when(merchantRepository.findById(1L)).thenReturn(Optional.empty());
+    void shouldThrowResourceNotFoundException_whenMerchantDoesNotExist() {
+        when(merchantRepository.findById(anyLong())).thenReturn(Optional.empty());
 
-        ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class, () -> {
-            merchantServiceImpl.getMerchantById(1L);
-        });
-
-        assertEquals("Merchant not found", exception.getMessage());
+        assertThrows(ResourceNotFoundException.class, () -> merchantServiceImpl.getMerchantById(1L));
     }
 
     @Test
-    void shouldReturnListOfMerchantDTOs_whenGetMerchantsByCategory() {
+    void shouldReturnMerchantsByCategory_whenCategoryExists() {
         Merchant merchant = aMerchant();
-        when(merchantRepository.findByCategory("test-value")).thenReturn(Arrays.asList(merchant));
-        when(merchantMapper.toDTO(merchant)).thenReturn(aMerchantDTO());
+        MerchantDTO dto = aMerchantDTO();
+        
+        when(merchantRepository.findByCategory("test-value")).thenReturn(List.of(merchant));
+        when(merchantMapper.toDTO(merchant)).thenReturn(dto);
 
         List<MerchantDTO> result = merchantServiceImpl.getMerchantsByCategory("test-value");
 
-        assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("TestName", result.get(0).getName());
+        assertEquals(dto.getName(), result.get(0).getName());
     }
 
     @Test
-    void shouldCreateMerchant_andReturnMerchantDTO() {
-        MerchantDTO dto = aMerchantDTO();
+    void shouldCreateMerchant_whenMerchantIsValid() {
+        MerchantDTO merchantDTO = aMerchantDTO();
         Merchant merchant = aMerchant();
-        when(merchantMapper.toEntity(dto)).thenReturn(merchant);
+
+        when(merchantMapper.toEntity(merchantDTO)).thenReturn(merchant);
         when(merchantRepository.save(merchant)).thenReturn(merchant);
-        when(merchantMapper.toDTO(merchant)).thenReturn(dto);
+        when(merchantMapper.toDTO(merchant)).thenReturn(merchantDTO);
 
-        MerchantDTO result = merchantServiceImpl.createMerchant(dto);
+        MerchantDTO result = merchantServiceImpl.createMerchant(merchantDTO);
 
         assertNotNull(result);
-        assertEquals("TestName", result.getName());
+        assertEquals(merchantDTO.getName(), result.getName());
     }
 
     @Test
-    void shouldUpdateMerchant_andReturnUpdatedMerchantDTO() {
+    void shouldUpdateMerchant_whenMerchantExists() {
         Merchant existingMerchant = aMerchant();
-        MerchantDTO dto = aMerchantDTO();
+        MerchantDTO merchantDTO = aMerchantDTO();
+        
         when(merchantRepository.findById(1L)).thenReturn(Optional.of(existingMerchant));
-        when(merchantMapper.toDTO(existingMerchant)).thenReturn(dto);
+        when(merchantMapper.toEntity(merchantDTO)).thenReturn(existingMerchant);
         when(merchantRepository.save(existingMerchant)).thenReturn(existingMerchant);
+        when(merchantMapper.toDTO(existingMerchant)).thenReturn(merchantDTO);
 
-        MerchantDTO result = merchantServiceImpl.updateMerchant(1L, dto);
+        MerchantDTO result = merchantServiceImpl.updateMerchant(1L, merchantDTO);
 
         assertNotNull(result);
-        assertEquals("TestName", result.getName());
-        verify(merchantRepository).save(existingMerchant);
+        assertEquals(merchantDTO.getName(), result.getName());
     }
 
     @Test
-    void shouldThrowResourceNotFoundException_whenUpdateMerchantDoesNotExist() {
-        MerchantDTO dto = aMerchantDTO();
-        when(merchantRepository.findById(1L)).thenReturn(Optional.empty());
+    void shouldThrowResourceNotFoundException_whenUpdatingNonExistentMerchant() {
+        when(merchantRepository.findById(anyLong())).thenReturn(Optional.empty());
 
-        ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class, () -> {
-            merchantServiceImpl.updateMerchant(1L, dto);
-        });
-
-        assertEquals("Merchant not found", exception.getMessage());
+        assertThrows(ResourceNotFoundException.class, () -> merchantServiceImpl.updateMerchant(1L, aMerchantDTO()));
     }
 }
